# dense_slam_benchmark_tool

./: .gitmodules  README.md  pyproject.toml
configs/: dense_n_view_benchmark.yaml
configs/dataset_tools/: BotanicGarden.yaml  DigiForests.yaml  TartanAir.yaml
configs/dataset_tools/ETH3d/multi_view_training/: forest.yaml
configs/machine/: default.yaml
configs/model/: depth_anything_v2.yaml  depth_anything_v3.yaml  depth_enhancement.yaml  foundation_stereo.yaml  hloc_loftr_sfm.yaml  hloc_loftr_triangulation.yaml  hloc_loma_sfm.yaml  hloc_loma_triangulation.yaml  hloc_romav2_sfm.yaml  hloc_romav2_triangulation.yaml  hloc_sift_sfm.yaml  hloc_sift_triangulation.yaml  hloc_superpoint_sfm.yaml  hloc_superpoint_triangulation.yaml  mapanything.yaml  mast3r.yaml  moge.yaml  multi_view_stereo.yaml  priorda.yaml  vggt.yaml
dense_slam_benchmark/benchmark_tools/: dataloader.py
dense_slam_benchmark/benchmark_tools/postprocessing/: __init__.py
dense_slam_benchmark/benchmark_tools/scripts/: dense_n_view_benchmark.py
dense_slam_benchmark/benchmark_tools/utils/: __init__.py
dense_slam_benchmark/dataset_tools/: utils.py
dense_slam_benchmark/dataset_tools/datasets/: base.py  eth3d.py
dense_slam_benchmark/dataset_tools/scripts/: benchmark_dataset_generator.py  dataset_visualizer.py
dense_slam_benchmark_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
