[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "dense_slam_benchmark_tool"
version = "0.0.1"
authors = [
  { name="PengZai", email="649365461@qq.com" }
]
description = "Dense SLAM & Depth Estimation Benchmark Tool - Unified framework for evaluating depth estimation and 3D reconstruction methods on standardized datasets"
readme = "README.md"
requires-python = ">=3.10.0"

dependencies = [
    "moderngl_window<3",
    "open3d",
    "opencv-python",
    "pytransform3d",
    "trimesh",
    "pyglet<2",
    "pycolmap",
    "hydra-core",
    "torch==2.10.0",
    "torchvision==0.25.0"
]


[project.optional-dependencies]
mast3r = ["mast3r @ git+https://github.com/Nik-V9/mast3r"]
prior-depth-anything = ["prior-depth-anything @ git+https://github.com/PengZai/Prior-Depth-Anything.git"]
mapanything = ["mapanything @ git+https://github.com/facebookresearch/map-anything.git"]
depth-anything-V2 = ["depth-anything-v2 @ git+https://github.com/PengZai/Depth-Anything-V2.git"]
depth-anything-V3 = ["depth-anything-3 @ git+https://github.com/PengZai/Depth-Anything-3.git@main#egg=depth-anything-3"]
vggt = ["vggt @ git+https://github.com/PengZai/vggt.git"]
foundation-stereo = ["FoundationStereo @ git+https://github.com/PengZai/FoundationStereo.git"]
moge = ["moge @ git+https://github.com/PengZai/MoGe.git"]

hloc = [
  "hloc[all-examples] @ git+https://github.com/PengZai/Hierarchical-Localization.git",
]


[tool.setuptools.packages.find]
include = ["dense_slam_benchmark*"]

[tool.setuptools.package-data]
dense_slam_benchmark = ["py.typed"]
